join keywords lists using ZERO WIDTH SPACE instead of empty string

this prevents the filter rule from matching silly word constructs

for example kcm_access.json has `["bounce keys", "slow keys"]` as
keywords. when we join those without separator we get 'bounce keysslow
keys'. that still matches the original words but also the silly join
construct of e.g. 'ssl'. to prevent all unintended keyword unions (or
sequences thereof) simply insert a ZWSP as separator

BUG: 487855